--- a/Build_Mate_fe/src/Pages/Home.css
+++ b/Build_Mate_fe/src/Pages/Home.css
@@ -14,21 +14,23 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: -1;
+  z-index: 0;
+  border-bottom-left-radius: 66px;
 }
 
 .content {
   margin-top: 200px;
   font-size: 20px;
   position: relative;
-  z-index: 1;
+  z-index: 4;
 }
+
 
 .ic1 { /*icon image*/
   display: flex;
   margin-top: -600px;
   margin-left: -100px;
-  z-index: -1;
+  z-index: 1;
   transform: translateY(50%);
 }
 
@@ -44,6 +46,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
+  z-index: 2;
 }
 
 .search-bar {
@@ -51,27 +54,69 @@
   align-items: center;
   justify-content: center;
   width: 45%;
+  z-index: 2;
 }
 
 .switch-buttons {
   display: flex;
   flex-direction: row;
   margin-bottom: 0px; /* Adjust spacing between switch bar and search bar */
+  margin-right: 280px;
+  height: 40px;
+
 }
 
-.switch-button {
-  background-color: #868686;
-  color: white;
+.switch-button-ex {
+  background-color: #fffefe;
+  color: black;
   font-size: 16px;
   padding: 8px 16px;
   cursor: pointer;
-  border-top-right-radius: 10px; /* Rounded corners */
-  border-bottom-right-radius: 10px;
+  width: 120px;
+  border-top-right-radius: 33px;
+  border-top-left-radius: 33px; /* Rounded corners */
   border: none;
   outline: none;
   transition: background-color 0.3s;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add shadow */
   margin-right: -5px; /* Adjust spacing between switch buttons */
+  z-index: 2; /* Bring the button to the front */
+  box-shadow: #545353 0 0 20px 0;
+}
+
+
+.switch-button-su {
+  background-color: #F3F0F0;
+  color: black;
+  font-size: 16px;
+  padding: 8px 16px;
+  cursor: pointer;
+  border-top-right-radius: 33px; /* Rounded corners */
+  border-top-left-radius: 3px;
+  width: 120px;
+  border: none;
+  outline: none;
+  transition: background-color 0.3s;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add shadow */
+  margin-left: -19px;
+  z-index: 1;
+  box-shadow: #4f4e4e 0 0 20px 0;
+}
+
+.switch-button-ma {
+  background-color: #D3D3D3;
+  color: black;
+  font-size: 16px;
+  padding: 8px 16px;
+  cursor: pointer;
+  border-top-right-radius: 33px; /* Rounded corners */
+  border-top-left-radius: 3px;
+  width: 120px;
+  border: none;
+  outline: none;
+  transition: background-color 0.3s;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add shadow */
+  margin-left: -19px;
 }
 
 .switch-button.active {
@@ -83,11 +128,15 @@
   flex-grow: 1;
   width: calc(100% - 150px); /* Take remaining space */
   padding: 8px;
-  border-radius: 20px;
+  border-radius: 0 0 0 33px;
   border: 1px solid #868686;
   margin: 0 10px;
   font-size: 16px;
   outline: none;
+  height: 40px;
+  background-color: #D9D9D9;
+  color: #0D113E;
+  
 }
 
 .search-button {
@@ -100,8 +149,173 @@
   cursor: pointer;
   transition: background-color 0.3s;
   outline: none;
+  height: 57px;
+  margin-left: -10px;
 }
 
 .search-button:hover {
   background-color: darkblue;
 }
+
+.h1-img{
+  margin-top: 139px;
+  margin-right: 870px;
+  border-radius: 0 0 71px 71px;
+}
+
+.h1-text{
+  color: black;
+  margin-left: 650px;
+  margin-top: -300px;
+  text-align: left;
+}
+
+.h1-button{
+  border-radius: 94px;
+  height: 40px;
+  width: 280px;
+  color: white;
+  background-color:#181360;
+  font-size: 25px;
+  margin-left: 210px;
+}
+
+.h2-img{
+  margin-top: 130px;
+  margin-left: 1120px;
+  border-radius:71px 71px 0 0;
+  height: 400px;
+  width: 300px;
+}
+
+.h2-text{
+  color: black;
+  margin-right: 450px;
+  margin-top: -300px;
+  text-align: right;
+}
+
+.h2-button{
+  border-radius: 94px;
+  height: 40px;
+  width: 280px;
+  color: white;
+  background-color:#181360;
+  font-size: 25px;
+  margin-right: 10px;
+}
+
+.path{
+  background-color:#dbdbdb;
+  width: 1520px;
+  margin-left: -100px;
+  margin-top: 0px;
+  height: 987px;
+  z-index: 2;
+  
+}
+
+
+
+.t1{
+  
+  margin-right: 900px;
+  margin-top: 60px;
+}
+
+.h-t1{
+  color: #FF6B00;
+  font-weight:1000;
+}
+
+.p-t1{
+  color: black;
+}
+
+.t2{
+  margin-right: 400px;
+  margin-top: -105px;
+}
+
+.h-t2{
+  color: #FF6B00;
+  font-weight:1000;
+}
+
+.p-t2{
+  color: black;
+}
+
+.t3{
+  margin-left: 200px;
+  margin-top: -105px;
+}
+
+.h-t3{
+  color: #FF6B00;
+  font-weight:1000;
+}
+
+.p-t3{
+  color: black;
+}
+
+.t4{
+  margin-left: 800px;
+  margin-top: -105px;
+}
+
+.h-t4{
+  color: #FF6B00;
+  font-weight:1000;
+}
+
+.p-t4{
+  color: black;
+}
+
+.details-content{
+  background-color: #d9d9d9;
+  border-radius: 40px;
+  width: 1440px;
+  height: 220px;
+  margin-left: 22px;
+  align-content: auto;
+  text-align: center;
+  position: absolute;
+  top: 40px; 
+  left: 40px; 
+  right: 40px;
+  bottom: 40px;
+  
+
+  
+}
+
+.det{
+  background-color: #b1b0b0;
+  height: 300px;
+  position: relative;
+  width: 1520px; 
+  margin-top: 100px;
+ 
+}
+
+.ic2{
+  display: inline;
+  margin-top: 100px;
+  margin-left: 800px;
+}
+
+.wel-h{
+  color: black;
+  margin-top: -550px;
+}
+
+.wel-p{
+  color: black;
+  text-align: center;
+  margin-left: 500px;
+  margin-right: 500px;
+}
+
