--- a/Build_Mate_fe/src/Pages/Contact.css
+++ b/Build_Mate_fe/src/Pages/Contact.css
@@ -1,57 +1,62 @@
+.contact{
+  font-family: Poppins;
+}
 .contact-image-container {
-  position: relative;
-  display: inline-block;
+  position: absolute;
+  background-size: cover;
+  object-fit: cover;
+  z-index: -100;
+  margin-bottom: -100px;
 }
 
 .contact-image-container img {
-  display: block;
-  width: 1473px;
-  height: 741.5px;
-  margin-left: 0px;
+  width: 100%;
+  height: 100%;
 }
 
 .contact-white-container {
+  display: flex;
   position: absolute;
-  top: 100px;
-  left: 210px;
-  width: 1039px;
-  height: 602px;
+  width: 80%;
+  height: 60%;
+  left: 10%;
   background-color: #ffffff68; /* Adjust the opacity as needed */
-  border-radius: 103px;
+  border-radius: 100px;
   z-index: 0;
   box-shadow: 3px 3px 3px 5px rgba(0, 0, 0, 0.466);
+  margin-top: -65%;
 }
 
 .contact-head {
   text-align: center;
   color: #0D113E;
-  padding-top: 40px;
   font-weight: bold;
   font-size: 40px;
+  margin-left: 25%;
 }
 
 .contact-orange-container {
-  top: 190px;
-  left: 75px;
   position: absolute;
   border-radius: 50px 0 0 50px;
   background-color: #FF6B00;
-  z-index: 1;
-  width: 530px;
-  height: 371px;
-  box-shadow: -3px 1px 5px 6px rgba(0, 0, 0, 0.548);
+  z-index: 100;
+  width: 50%;
+  height: 75%;
+  top:25%;
+  box-shadow: -3px 1px 5px 6px rgba(0, 0, 0, 0.5);
+  margin-left: 10%;
 }
 
 .contact-white-container2 {
-  top: 190px;
-  right: 75px;
   position: absolute;
   border-radius: 0 50px 50px 0;
   background-color: #FFFFFF;
   z-index: 1;
-  width: 359px;
-  height: 371px;
-  box-shadow: -1px -2px 5px 6px rgba(0, 0, 0, 0.564);
+  width: 30%;
+  height: 75%;
+  top:25%;
+  box-shadow: -3px 1px 5px 6px rgba(0, 0, 0, 0.5);
+  margin-left: 60%;
 }
 
 .contact-head1 {
@@ -144,20 +149,22 @@
 }
 
 .contact-button {
-  color: #FFFFFF;
-  background-color: #0D113E;
-  font-weight: 700;
-  font-size: 14px;
-  width: 125px;
-  height: 28px;
-  margin-left: 345px;
-  margin-top: 20px;
-  border-radius: 7px;
-  box-shadow: 1px 1px 3px 3px rgba(249, 248, 250, 0.336);
+    color: #ffffff;
+    font-family: Poppins;
+    font-weight: 900;
+    font-size: 15px;
+    letter-spacing: 2px;
+    border-radius: 18px;
+    padding: 10px 20px;
+    background-color: #0D113E;
+    border: none;
+    cursor: pointer;
+    margin-left: 70%;
+    margin-top: 2%;
 }
 
 .contact-para {
-  font-size: 13px;
+  font-size: 15px;
   text-align: left;
   padding-top: 60px;
   padding-left: 30px;
