--- a/Build_Mate_fe/src/Pages/Architecture.css
+++ b/Build_Mate_fe/src/Pages/Architecture.css
@@ -26,7 +26,7 @@
     letter-spacing: 0.02em;
     text-align: left;
     left: 4%;
-    margin-top: 65px;
+    margin-top: 1%;
 
 }
 
@@ -38,6 +38,7 @@
     letter-spacing: 0.02em;
     text-align: left;
     left: 70px;
+    
   
 }
 
@@ -51,9 +52,11 @@
     font-size: 20px;
     font-weight: 500;
     line-height: 30px;
-    margin-right: 85%;
+    
     text-align: left;
     margin-top: 40px;
+    width: 15%;
+    cursor: pointer;
     
 }
 
@@ -76,8 +79,8 @@
     position: absolute;
     left: 50%;
     transform: translate(-50%, -50%);
-    margin-top: 7%;
-    padding-top: 1.5%;
+    margin-top: 6%;
+    padding-top: 0.5%;
     padding-left: 4%;
     padding-bottom: 1%;
 
@@ -104,6 +107,7 @@
     left: 80px;
     padding-top: 200px;
     padding-left: 4%;
+   
 }
 
 .arch2 {
@@ -130,6 +134,7 @@
     border-bottom: 2px solid #000000;
     margin-left: 4%;
     width: 91.5%;
+    margin-top: -13%;
 }
 
 .arch2::after {
@@ -141,6 +146,7 @@
   border-top: 2px solid #000000; 
   width: 91.5%;
   margin-left: 4%;
+  margin-top: -15%;
 }
 
 .highlight {
@@ -153,17 +159,7 @@
 
 }
 
-.arch3 {
-  padding-left: 5%;
-  margin-top: 50px;
-  font-family: "Poppins", sans-serif;
-  font-size: 25px;
-  font-weight: 600;
-  line-height: 37.5px;
-  text-align: left;
 
-  
-}
 
 .button-search {
   margin-left: 87%;
@@ -177,7 +173,8 @@
   text-align: right;
   width: 130px;
   height: 50px;
-  margin-top: -50%;
+  margin-top: -45%;
+  cursor: pointer;
 
 }
 
@@ -185,7 +182,7 @@
   margin-left: 5%;
   font-family: "Poppins", sans-serif;
   font-size: 25px;
-  margin-top: auto;
+  margin-top: 4%;
   font-weight: 600;
   line-height: 37.5px;
   text-align: left;
@@ -194,6 +191,7 @@
 
 .container1 {
  background-color: #ffffff;
+ margin-top: 2%;
 }
 
 .button-2 {
@@ -210,6 +208,7 @@
   padding-left: 5%;
   margin-left: 4%;
   margin-top: 25px;
+  cursor: pointer;
 }
 
 .button2 {
@@ -228,21 +227,22 @@
   padding-left: 5%;
   margin-left: 4%;
   margin-top: 25px;
+  cursor: pointer;
 }
 
 .vertical-line {
   position: absolute;
-  top: 1110px;
+  top: 105%;
   left: 453.5px; 
   transform: translateX(-90%); 
   width: 3px;
-  height: 1650px;
+  height: 209%;
   background-color: #535353;
 }
 
 .archi-tab {
   padding-left: 490px;
-  margin-top: -56.5%;
+  margin-top: -48.5%;
   border-spacing: 25px;  
 }
 
@@ -281,6 +281,7 @@
   text-align: center;
 
 }
+
 
 .profile-title {
   font-family: "Poppins",sans-serif;
@@ -329,5 +330,7 @@
   border-radius: 8px;
   border-color: #ffffff;
   border-style: double;
+  cursor: pointer;
 }
+
 
