--- a/Build_Mate_fe/src/Pages/Home.css
+++ b/Build_Mate_fe/src/Pages/Home.css
@@ -204,11 +204,13 @@
 }
 .firstbox{
   padding: 0 10% ;
+  max-width: 80%;
+  max-height: 10%;
 }
 .box1{
   display: flex;
   align-items: center;
-  margin: 25% auto auto auto;
+  margin: 30% auto auto auto;
   border-radius: 65px;
   box-shadow: 0 0 40px rgba(67, 67, 67, 0.4);
   
@@ -238,19 +240,21 @@
     justify-content: center;
 }
 .h1-text{
-  width: 70%;
+  width: 40%;
   color: black;
   text-align: right;
+  font-size: 150%;
 }
 .h1-button{
-  height: 15%;
   border-radius: 50px;
-  width: 30%;
   color: white;
   font-size: 23px;
+  padding: 10px 20px;
   font-weight: 600;
   background-color:#0D113E;
   border: none;
+  border-width: 100%;
+  cursor: pointer;
 }
 .box2{
   display: flex;
@@ -280,7 +284,8 @@
   width: 100%;
   height: 50%;
   display: flex;
-  margin: 2% 0 0 0;
+  margin-top: 2%;
+  margin-bottom: 2%;
   justify-content: center;
 }
 .t1{
