--- a/Build_Mate_fe/src/Pages/Projects.css
+++ b/Build_Mate_fe/src/Pages/Projects.css
@@ -1,6 +1,6 @@
 .pro-mimg {
-    filter: brightness(55%);
-    height: 670px;
+    filter: brightness(40%);
+    max-height: 670px;
     width: 100%;
     object-fit: cover;
     position: absolute;
@@ -10,117 +10,154 @@
     border-radius: 0 0 0 155px ;
 }
 
+.pro-content{
+  display: flex;
+  flex-direction: column;
+    align-items: center;
+    margin-top: 15%;
+
+}
 .pro-topic{
     font-family: "Poppins", sans-serif;
-    font-size: 150px;
+    font-size: 900%;
     color: white;
-    padding-left: 30%;
-    padding-top: 4%;
-    
+    margin: auto;
   }
 
   .pro-subtopic{
-    font-size: 35px;
+    font-size: 200%;
     font-weight: 500;
-    width: 40%;
     height: 20%;
     background-color: #0D113E;
     border-radius: 25px;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    align-content: center;
-    margin-top: 6.2%;
     color: white;
-    padding-left: 5%;
+    padding: 2% 5%;
+    margin-top: 2%;
   }
 
-  .pro-st1{
-    font-family: "Poppins", sans-serif;
-    font-size: 40px;
-    padding-left: 7%;
-    padding-top: 15%;
+  .pro-body01{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 0 5%;
   }
 
   .pro-line{
-    font-size: 45px;
-    padding-left: 7%;  
-    margin-top: -2.4%;
-}
+    border: 1px solid black;
+    background-color: black;
+    width: 100%;
+    height: 1px;
+    margin: 1% 0;
+  }
+  .pro-st1{
+    font-family: "Poppins", sans-serif;
+    font-size: 40px;
+  }
 
   .pro-tline{
     font-family: "Poppins", sans-serif;
     font-size: 25px;
-    padding-left: 8%;
-    padding-top: 0.001%;
   }
-
+  .pro-body02{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin: 0 5% 0 5%;
+  }
+  .pro-Subbody01{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 2%;
+}
+.pro-Subbody02{
+  display: flex;
+  flex-direction: column;
+    align-items: center;
+    width: 20%;
+}
+.pro-body03{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
   .pro-fil{
     font-family: "Poppins", sans-serif;
     font-weight: 600;
     font-size: 22px;
-    padding-left: 8%;
-    padding-top: 2%;
-    position: absolute;
   }
 
   .pro-sea{
     font-family: "Poppins", sans-serif;
     font-size: 22x;
     font-weight: 600;
-    padding-left: 92%;
-    padding-top: 2%;
-    position: absolute;
     
   }
-
   .pro-st2{
     font-family: "Poppins", sans-serif;
-    font-size: 20px;
+    font-size: 25px;
     font-weight: 600;
-    letter-spacing: 0.5ch;
-    padding-left: 8%;
-    padding-top: 6%;
-    position: absolute;
+    margin-top: 10%;
+    margin-bottom: 5%;
+    position: static;
   }
 
-  .pro-t1{
-    font-family: "Poppins", sans-serif;
-    font-size: 18px;
-    font-weight: 400;
-    position:absolute;
-    
-    
-  }
-
-  .pro-con-t1{
-    background-color: #FF6B00;
-    color: white;
-    height: 42px;
-    width: 12%;
-    margin-left: 8%;
-    margin-top: 12%;
-    border-radius: 15px;
-    text-align: center;
-    padding-bottom: 3%;
-
-    
-  }
-  
   .pro-con1-t1{
+    font-size: 100%;
     background-color: white;
     color: black;
-    height: 40px;
-    width: 12%;
-    margin-left: 8%;
-    margin-top: 1%;
+    border: 1px solid #ccc;
+    padding: 10px 20px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    width: 100%;
+    padding: 5%;
     border-radius: 15px;
     text-align: center;
-    padding-bottom: 3%;
     
     
   }
 
+  .pro-con1-t1:hover {
+    background-color: #f0f0f0;
+  }
+  
+  .pro-con1-t1.active {
+    background-color: #FF6B00;
+    color: white;
+  }
+  .pro-event01{
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    padding: 0 5%;
+  }
+  .pro-event{
+    margin-left: 5%;
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    align-items: baseline;
+    justify-content: right;
+    border: 1px solid black;
+    border-radius: 25px;
+    margin-bottom: 5%;
+  }
+  
+  .pro-Subbody04{
+    margin-top: 5%;
+    display: flex;
+    flex-direction: column;
+    margin-right: 10%;
+    width: 20%;
+  }
+  .pro-Subbody05{
+    margin-top: 5%;
+    display: flex;
+    flex-direction: column;
+    margin-right: 10%;
+    width: 20%;
+  }
   .pro-con{
     width: 0.2%;
     height: 100%;
@@ -131,134 +168,103 @@
    
   }
 
-  .pro-scon1{
-    width: 26%;
-    height: 320px;
-    background-color: #D9D9D9;
-    margin-left: 40%;
-    position: absolute;
-    border-radius: 20px 20px 0 0;
-  }
+  /* src/YourComponent.css */
+.pro-scon1 {
+  width: 110%;
+  height: 50%;
+  background-color: #0D113E;
+  border-radius: 20px 20px 0 0;
+  margin-bottom: 10%;
+  position: relative;
+}
 
-  .pro-img{
-    width: 100%;
-    height: 62%;
-    border-radius: 20px 20px 0 0;
-    z-index: 0;
-    
-    
-  }
+.pro-box {
+  color: rgb(255, 255, 255);
+  padding-bottom: 5%;
+}
 
-  .pro-scon2{
-    width: 26%;
-    height: 280px;
-    background-color: #D9D9D9;
-    margin-left: 70%;
-    position: absolute;
-    border-radius: 20px 20px 0 0;
-    height: 320px;
-  }
+.pro-box p {
+  margin: auto;
+  
+}
 
-  .pro-scon3{
-    width: 26%;
-    height: 280px;
-    background-color: #D9D9D9;
-    margin-left: 40%;
-    margin-top:23% ;
-    position: absolute;
-    border-radius: 20px 20px 0 0;
-    height: 320px;
-  }
+.pro-img {
+  width: 100%;
+  height: 45%;
+  border-radius: 20px 20px 0 0;
+  filter: brightness(50%);
+}
 
-  .pro-date{
-    font-family: "Poppins", sans-serif;
-    font-size: 14px;
-    font-weight: 600;
-    color: #D9D9D9;
-    margin-top: -33%;
-    margin-left: 10%;
-    z-index: 1;
-  }
+.pro-date {
+  font-family: "Poppins", sans-serif;
+  font-size: 80%;
+  font-weight: 400;
+  color: white;
+  text-align: right;
+  padding:  5%;
+}
 
-  .pro-head{
-    font-family: "Poppins", sans-serif;
-    font-size: 16px;
-    font-weight: 900;
-    color: #D9D9D9;
-    padding-left: 10%;
-    padding-top: 16%;
-  }
+.pro-head {
+  font-family: "Poppins", sans-serif;
+  font-size: 100%;
+  text-align: center;
+  font-weight: 900;
+  color: rgb(0, 0, 0);
+  background-color: white;
+  padding: 5% 0;
+  width: 100%;
+}
 
-  .pro-para{
-    font-family: "Poppins", sans-serif;
-    font-size: 11px;
-    font-weight: 600;
-    color: #D9D9D9;
-    padding-left: 10%;
-    margin-top: -4%;
-    z-index: 1;
-  }
+.pro-para {
+  font-family: "Poppins", sans-serif;
+  font-size: 80%;
+  font-weight: 600;
+  padding-top: 5%;
+  padding-left: 5%;
+}
 
-  .pro-prog{
-    font-family: "Poppins", sans-serif;
-    font-size: 18px;
-    font-weight: 300;
-    padding-left: 10%;
-    position: absolute;
-  }
+.pro-prog, .pro-est {
+  font-family: "Poppins", sans-serif;
+  font-size: 80%;
+  font-weight: 300;
+  padding-left: 5%;
+}
 
-  .pro-est{
-    font-family: "Poppins", sans-serif;
-    font-size: 18px;
-    font-weight: 300;
-    padding-left: 50%;
-    position: absolute;
-  }
+.pro-md {
+  font-size: 80%;
+  background-color: white;
+  color: black;
+  border: 1px solid #ccc;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  width: 50%;
+  padding: 2%;
+  border-radius: 15px;
+  margin: 10px auto;
+  text-align: center;
+  display: block;
+}
 
-  .pro-md{
-    font-family: "Poppins", sans-serif;
-    color: #D9D9D9;
-    background-color: #0D113E;
-    border-radius: 10px;
-    height: 10%;
-    width: 32%;
-    margin-left: 31%;
-    margin-top: 14%;
-  }
+.pro-md:hover {
+  background-color: #f0f0f0;
+}
 
-  .pro-scon4{
-    width: 26%;
-    height: 280px;
-    background-color: #D9D9D9;
-    margin-left: 70%;
-    position: absolute;
-    border-radius: 20px 20px 0 0;
-    height: 320px;
-    margin-top: 23%;
-  }
+.pro-md.active {
+  background-color: #FF6B00;
+  color: white;
+}
 
-  .pro-scon5{
-    width: 26%;
-    height: 280px;
-    background-color: #D9D9D9;
-    margin-left: 40%;
-    margin-top:46% ;
-    position: absolute;
-    border-radius: 20px 20px 0 0;
-    height: 320px;
-  }
+.pro-line01 {
+  width: 75%;
+  border: 1px solid black;
+  background-color: black;
+  height: 1px;
+  margin: 1% 0;
+  position: absolute;
+}
 
-  .pro-scon6{
-    width: 26%;
-    height: 280px;
-    background-color: #D9D9D9;
-    margin-left: 70%;
-    position: absolute;
-    border-radius: 20px 20px 0 0;
-    height: 320px;
-    margin-top: 46%;
-  }
 
+  
   .pro-sm{
     font-family: "Poppins", sans-serif;
     color: #D9D9D9;
