--- a/Build_Mate_fe/src/Pages/ProfileCards.css
+++ b/Build_Mate_fe/src/Pages/ProfileCards.css
@@ -124,6 +124,7 @@
     font-size: 1.5em;
     font-weight: 800;
     margin: 0;
+    color: #000;
 }
 
 .profile-role {
@@ -157,6 +158,7 @@
 .profile-content p {
     font-size: 1em;
     margin-bottom: 10px;
+    color: black;
 }
 
 .profile-content a {
